@@ -20,7 +20,6 @@
     </content>
     <orderEntry type="inheritedJdk" />
     <orderEntry type="sourceFolder" forTests="false" />
-    <orderEntry type="library" name="Google collections" level="project" />
     <orderEntry type="module-library" scope="TEST">
       <library>
         <CLASSES>
